tests/idris2/error/error026/expected
1/1: Building DoBlockFC (DoBlockFC.idr)
Error: While processing right hand side of foo. When unifying:
    Maybe Int
and:
    Either ?_ ?_
Mismatch between: Maybe Int and Either ?_ ?_.

DoBlockFC:6:3--6:10
 2 | bar : Maybe Int
 3 | 
 4 | foo : Either String Int
 5 | foo = do
 6 |   Right n <- pure bar | _ => Left "fail"
       ^^^^^^^

